--- a/Big Data for Public Policy Project API Workbook.ipynb
+++ b/Big Data for Public Policy Project API Workbook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def makeurl(i):\n",
     "    base_url = 'http://www.patentsview.org/api/patents/query?'\n",
-    "    criterion = 'q={\"_and\":[{\"_gte\":{\"patent_year\":\"2014\"}},{\"_lt\":{\"patent_year\":\"2015\"}},{\"_eq\":{\"assignee_lastknown_country\":\"US\"}}]}'\n",
-    "    field = '&f=[\"assignee_city\",\"assignee_state\",assignee_country\",\"assignee_county_fips\",\"patent_title\",\"patent_number\",\"patent_year\",\"assignee_organization\",\"ipc_section\",\"ipc_class\",\"citedby_patent_title\",\"citedby_patent_number\",\"citedby_patent_kind\",\"citedby_patent_date\",\"citedby_patent_category\"]'\n",
+    "    criterion = 'q={\"_and\":[{\"_gte\":{\"patent_year\":\"2014\"}},{\"_eq\":{\"assignee_lastknown_country\":\"US\"}}]}'\n",
+    "    field = '&f=[\"assignee_city\",\"assignee_country\",\"assignee_county_fips\",\"patent_title\",\"patent_number\",\"patent_year\",\"assignee_organization\",\"ipc_section\",\"ipc_class\",\"citedby_patent_title\",\"citedby_patent_number\",\"citedby_patent_kind\",\"citedby_patent_date\",\"citedby_patent_category\"]'\n",
     "    option = '&o={{\"page\":{},\"per_page\":10000}}'.format(i)\n",
     "    url = base_url + criterion + field + option\n",
     "    return url "
@@ -33,135 +33,234 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: 400\n",
-      "Error: 400\n",
-      "Error: 400\n",
-      "Error: 400\n",
-      "Error: 400\n",
-      "Error: 400\n",
-      "Error: 400\n",
-      "Error: 400\n",
-      "Error: 400\n",
-      "Error: 400\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "patents = pd.DataFrame([])\n",
     "for i in range(1,11):\n",
     "    url = makeurl(i)\n",
     "    r = requests.get(url)\n",
-    "    status = r.status_code\n",
-    "    if status==200: \n",
-    "        response = r.json()\n",
-    "        df = json_normalize(response['patents'])\n",
-    "        patents =  patents.append(df)\n",
-    "    if status==204:\n",
-    "        patents = patents\n",
-    "    else:\n",
-    "        print(\"Error: {}\".format(status))"
+    "    response = r.json()\n",
+    "    \n",
+    "    df = pd.json_normalize(response['patents'])\n",
+    "    patents =  patents.append(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>patent_title</th>\n",
+       "      <th>patent_number</th>\n",
+       "      <th>patent_year</th>\n",
+       "      <th>assignees</th>\n",
+       "      <th>IPCs</th>\n",
+       "      <th>citedby_patents</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Coherent LADAR using intra-pixel quadrature de...</td>\n",
+       "      <td>10000000</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>[{'assignee_city': 'Waltham', 'assignee_countr...</td>\n",
+       "      <td>[{'ipc_section': 'G', 'ipc_class': '01'}]</td>\n",
+       "      <td>[{'citedby_patent_title': None, 'citedby_paten...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PEX expanding tool</td>\n",
+       "      <td>10000007</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>[{'assignee_city': 'Brookfield', 'assignee_cou...</td>\n",
+       "      <td>[{'ipc_section': 'B', 'ipc_class': '29'}]</td>\n",
+       "      <td>[{'citedby_patent_title': None, 'citedby_paten...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bracelet mold and method of use</td>\n",
+       "      <td>10000008</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>[{'assignee_city': 'Northvale', 'assignee_coun...</td>\n",
+       "      <td>[{'ipc_section': 'B', 'ipc_class': '29'}, {'ip...</td>\n",
+       "      <td>[{'citedby_patent_title': None, 'citedby_paten...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3-D electrostatic printer using rack and pinio...</td>\n",
+       "      <td>10000010</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>[{'assignee_city': 'Norwalk', 'assignee_countr...</td>\n",
+       "      <td>[{'ipc_section': 'B', 'ipc_class': '29'}, {'ip...</td>\n",
+       "      <td>[{'citedby_patent_title': None, 'citedby_paten...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Supports for sintering additively manufactured...</td>\n",
+       "      <td>10000011</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>[{'assignee_city': 'Watertown', 'assignee_coun...</td>\n",
+       "      <td>[{'ipc_section': 'B', 'ipc_class': '29'}, {'ip...</td>\n",
+       "      <td>[{'citedby_patent_title': None, 'citedby_paten...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9995</th>\n",
+       "      <td>Guard filtering system for focused sampling probe</td>\n",
+       "      <td>10215022</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>[{'assignee_city': 'Sugar Land', 'assignee_cou...</td>\n",
+       "      <td>[{'ipc_section': 'E', 'ipc_class': '21'}]</td>\n",
+       "      <td>[{'citedby_patent_title': None, 'citedby_paten...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9996</th>\n",
+       "      <td>Trapping shoe lubrication system</td>\n",
+       "      <td>10215023</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>[{'assignee_city': 'Warrendale', 'assignee_cou...</td>\n",
+       "      <td>[{'ipc_section': 'E', 'ipc_class': '21'}, {'ip...</td>\n",
+       "      <td>[{'citedby_patent_title': None, 'citedby_paten...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9997</th>\n",
+       "      <td>System for forming and maintaining a fundament...</td>\n",
+       "      <td>10215024</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>[{'assignee_city': 'Houston', 'assignee_countr...</td>\n",
+       "      <td>[{'ipc_section': 'B', 'ipc_class': '65'}, {'ip...</td>\n",
+       "      <td>[{'citedby_patent_title': None, 'citedby_paten...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9998</th>\n",
+       "      <td>Aluminum fan blade construction with welded cover</td>\n",
+       "      <td>10215027</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>[{'assignee_city': 'Farmington', 'assignee_cou...</td>\n",
+       "      <td>[{'ipc_section': 'F', 'ipc_class': '01'}, {'ip...</td>\n",
+       "      <td>[{'citedby_patent_title': 'Power beam welded c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>Turbine blade with heat shield</td>\n",
+       "      <td>10215028</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>[{'assignee_city': 'Indianapolis', 'assignee_c...</td>\n",
+       "      <td>[{'ipc_section': 'F', 'ipc_class': '01'}]</td>\n",
+       "      <td>[{'citedby_patent_title': None, 'citedby_paten...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100000 rows × 6 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "400"
+       "                                           patent_title patent_number  \\\n",
+       "0     Coherent LADAR using intra-pixel quadrature de...      10000000   \n",
+       "1                                    PEX expanding tool      10000007   \n",
+       "2                       Bracelet mold and method of use      10000008   \n",
+       "3     3-D electrostatic printer using rack and pinio...      10000010   \n",
+       "4     Supports for sintering additively manufactured...      10000011   \n",
+       "...                                                 ...           ...   \n",
+       "9995  Guard filtering system for focused sampling probe      10215022   \n",
+       "9996                   Trapping shoe lubrication system      10215023   \n",
+       "9997  System for forming and maintaining a fundament...      10215024   \n",
+       "9998  Aluminum fan blade construction with welded cover      10215027   \n",
+       "9999                     Turbine blade with heat shield      10215028   \n",
+       "\n",
+       "     patent_year                                          assignees  \\\n",
+       "0           2018  [{'assignee_city': 'Waltham', 'assignee_countr...   \n",
+       "1           2018  [{'assignee_city': 'Brookfield', 'assignee_cou...   \n",
+       "2           2018  [{'assignee_city': 'Northvale', 'assignee_coun...   \n",
+       "3           2018  [{'assignee_city': 'Norwalk', 'assignee_countr...   \n",
+       "4           2018  [{'assignee_city': 'Watertown', 'assignee_coun...   \n",
+       "...          ...                                                ...   \n",
+       "9995        2019  [{'assignee_city': 'Sugar Land', 'assignee_cou...   \n",
+       "9996        2019  [{'assignee_city': 'Warrendale', 'assignee_cou...   \n",
+       "9997        2019  [{'assignee_city': 'Houston', 'assignee_countr...   \n",
+       "9998        2019  [{'assignee_city': 'Farmington', 'assignee_cou...   \n",
+       "9999        2019  [{'assignee_city': 'Indianapolis', 'assignee_c...   \n",
+       "\n",
+       "                                                   IPCs  \\\n",
+       "0             [{'ipc_section': 'G', 'ipc_class': '01'}]   \n",
+       "1             [{'ipc_section': 'B', 'ipc_class': '29'}]   \n",
+       "2     [{'ipc_section': 'B', 'ipc_class': '29'}, {'ip...   \n",
+       "3     [{'ipc_section': 'B', 'ipc_class': '29'}, {'ip...   \n",
+       "4     [{'ipc_section': 'B', 'ipc_class': '29'}, {'ip...   \n",
+       "...                                                 ...   \n",
+       "9995          [{'ipc_section': 'E', 'ipc_class': '21'}]   \n",
+       "9996  [{'ipc_section': 'E', 'ipc_class': '21'}, {'ip...   \n",
+       "9997  [{'ipc_section': 'B', 'ipc_class': '65'}, {'ip...   \n",
+       "9998  [{'ipc_section': 'F', 'ipc_class': '01'}, {'ip...   \n",
+       "9999          [{'ipc_section': 'F', 'ipc_class': '01'}]   \n",
+       "\n",
+       "                                        citedby_patents  \n",
+       "0     [{'citedby_patent_title': None, 'citedby_paten...  \n",
+       "1     [{'citedby_patent_title': None, 'citedby_paten...  \n",
+       "2     [{'citedby_patent_title': None, 'citedby_paten...  \n",
+       "3     [{'citedby_patent_title': None, 'citedby_paten...  \n",
+       "4     [{'citedby_patent_title': None, 'citedby_paten...  \n",
+       "...                                                 ...  \n",
+       "9995  [{'citedby_patent_title': None, 'citedby_paten...  \n",
+       "9996  [{'citedby_patent_title': None, 'citedby_paten...  \n",
+       "9997  [{'citedby_patent_title': None, 'citedby_paten...  \n",
+       "9998  [{'citedby_patent_title': 'Power beam welded c...  \n",
+       "9999  [{'citedby_patent_title': None, 'citedby_paten...  \n",
+       "\n",
+       "[100000 rows x 6 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "status = r.status_code \n",
-    "status"
+    "patents"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0, 0)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "patents.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'int' object has no attribute 'type'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-6d80d9cd0fcf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mstatus\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'type'"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "patents.iloc[::1000, :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'patents'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-ae94d38b25c9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresponse\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'patents'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m: 'patents'"
-     ]
-    }
-   ],
-   "source": [
-    "response['patents']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
